--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "symfony/filesystem": "^3.1"
+        "symfony/filesystem": "^3.1",
+        "elasticsearch/elasticsearch": "^2.2"
     },
     "autoload": {
       "psr-4": {
